homepage interactive wip

--- a/public/_partials/comparison-chart.jade
+++ b/public/_partials/comparison-chart.jade
@@ -1,90 +1,93 @@
 .charts-wrapper
-  ul.panel-3.panel-inactive
-    li Med-Lg Companies
-    li 
-      span.glyphicon.glyphicon-ok-sign  
-    li
-      span.glyphicon.glyphicon-ok-sign
-    li 
-      span.glyphicon.glyphicon-ok-sign  
-    li
-      span.glyphicon.glyphicon-ok-sign
-    li 
-      span.glyphicon.glyphicon-ok-sign  
-    li
-      span.glyphicon.glyphicon-ok-sign
-    li 
-      span.glyphicon.glyphicon-ok-sign  
-    li
-      span.glyphicon.glyphicon-ok-sign
-    li
-      span.glyphicon.glyphicon-ok-sign
-    li
-      span.glyphicon.glyphicon-ok-sign     
-    li
-      span.glyphicon.glyphicon-ok-sign              
-    li Email, RFC-1149
-    li Commercial
-    li $1750 / yr / 10 processes
-    li Credit, Invoice
+  .panel-mask.mask-inactive
+    ul.panel.panel-3
+      li Med-Lg Companies
+      li 
+        span.glyphicon.glyphicon-ok-sign  
+      li
+        span.glyphicon.glyphicon-ok-sign
+      li 
+        span.glyphicon.glyphicon-ok-sign  
+      li
+        span.glyphicon.glyphicon-ok-sign
+      li 
+        span.glyphicon.glyphicon-ok-sign  
+      li
+        span.glyphicon.glyphicon-ok-sign
+      li 
+        span.glyphicon.glyphicon-ok-sign  
+      li
+        span.glyphicon.glyphicon-ok-sign
+      li
+        span.glyphicon.glyphicon-ok-sign
+      li
+        span.glyphicon.glyphicon-ok-sign     
+      li
+        span.glyphicon.glyphicon-ok-sign              
+      li Email, RFC-1149
+      li Commercial
+      li $1750 / yr / 10 processes
+      li Credit, Invoice
 
-  ul.panel-2.panel-inactive
-    li Small Business
-    li 
-      span.glyphicon.glyphicon-ok-sign  
-    li
-      span.glyphicon.glyphicon-ok-sign
-    li 
-      span.glyphicon.glyphicon-ok-sign  
-    li
-      span.glyphicon.glyphicon-ok-sign
-    li 
-      span.glyphicon.glyphicon-ok-sign  
-    li
-      span.glyphicon.glyphicon-ok-sign
-    li 
-      span.glyphicon.glyphicon-ok-sign  
-    li
-      span.glyphicon.glyphicon-ok-sign
-    li
-      span.glyphicon.glyphicon-minus-sign
-    li
-      span.glyphicon.glyphicon-minus-sign     
-    li
-      span.glyphicon.glyphicon-minus-sign              
-    li Email
-    li Commercial
-    li $950 / yr
-    li Credit Card
+  .panel-mask.mask-inactive
+    ul.panel.panel-2
+      li Small Business
+      li 
+        span.glyphicon.glyphicon-ok-sign  
+      li
+        span.glyphicon.glyphicon-ok-sign
+      li 
+        span.glyphicon.glyphicon-ok-sign  
+      li
+        span.glyphicon.glyphicon-ok-sign
+      li 
+        span.glyphicon.glyphicon-ok-sign  
+      li
+        span.glyphicon.glyphicon-ok-sign
+      li 
+        span.glyphicon.glyphicon-ok-sign  
+      li
+        span.glyphicon.glyphicon-ok-sign
+      li
+        span.glyphicon.glyphicon-minus-sign
+      li
+        span.glyphicon.glyphicon-minus-sign     
+      li
+        span.glyphicon.glyphicon-minus-sign              
+      li Email
+      li Commercial
+      li $950 / yr
+      li Credit Card
   
-  ul.panel-1.panel-active
-    li Hobbyists
-    li 
-      span.glyphicon.glyphicon-ok-sign  
-    li
-      span.glyphicon.glyphicon-ok-sign
-    li 
-      span.glyphicon.glyphicon-ok-sign  
-    li
-      span.glyphicon.glyphicon-ok-sign
-    li 
-      span.glyphicon.glyphicon-minus-sign  
-    li
-      span.glyphicon.glyphicon-minus-sign
-    li 
-      span.glyphicon.glyphicon-minus-sign  
-    li
-      span.glyphicon.glyphicon-minus-sign
-    li
-      span.glyphicon.glyphicon-minus-sign
-    li
-      span.glyphicon.glyphicon-minus-sign     
-    li
-      span.glyphicon.glyphicon-minus-sign              
-    li None
-    li LGPL
-    li Free
-    li n/a
+  .panel-mask.mask-active
+    ul.panel.panel-1
+      li Hobbyists
+      li 
+        span.glyphicon.glyphicon-ok-sign  
+      li
+        span.glyphicon.glyphicon-ok-sign
+      li 
+        span.glyphicon.glyphicon-ok-sign  
+      li
+        span.glyphicon.glyphicon-ok-sign
+      li 
+        span.glyphicon.glyphicon-minus-sign  
+      li
+        span.glyphicon.glyphicon-minus-sign
+      li 
+        span.glyphicon.glyphicon-minus-sign  
+      li
+        span.glyphicon.glyphicon-minus-sign
+      li
+        span.glyphicon.glyphicon-minus-sign
+      li
+        span.glyphicon.glyphicon-minus-sign     
+      li
+        span.glyphicon.glyphicon-minus-sign              
+      li None
+      li LGPL
+      li Free
+      li n/a
 
   ul.key
     li Audience
