--- a/public/_partials/head.jade
+++ b/public/_partials/head.jade
@@ -16,6 +16,8 @@ link(rel='canonical' href='http://sidekiq.org/')
 link(rel='shortcut icon' type='image/png' href='/favicon.png')
 
 script(src='#{baseUrl}/js/jquery/jquery.min.js')
+script(src='#{baseUrl}/js/jquery.scroll_to.js')
+script(src='#{baseUrl}/js/jquery.snapscroll.min.js')
 script(src='#{baseUrl}/js/bootstrap/bootstrap.js')
 script(src='#{baseUrl}/js/scrollingcarousel.2.0.min.js')
 script(src='#{baseUrl}/js/skq-global.js')
