--- a/public/index.jade
+++ b/public/index.jade
@@ -12,41 +12,48 @@
 
 != partial("_partials/tab-nav")  
 
-.comparison-chart
+.comparison-chart.hidden-xs
   .row
     .col-sm-8
       != partial("_partials/comparison-chart")
     .col-sm-4
 
-    a.prompt.hidden-xs(href='#enterprise') Running a large company?
-    a.prompt.hidden-xs(href='#pro') Need functionality built for business?      
+.products
+  #oss.container.skq-chart-area-1.no-margin
+    .row
+      .col-sm-8
+      .col-sm-4
+        .skq-copy-2
+          h4 Interested in trying Sidekiq out on your own project?
+          p Check out the source code and documentation on GitHub to get started.
+          a.btn.btn-primary.btn-lg(href='https://github.com/mperham/sidekiq/' target='_new')
+            | Take me to GitHub &emsp;
+            span.glyphicon.glyphicon-new-window
+          a.prompt.hidden-xs.jump-link(href='#pro')
+            | Need functionality built for business?
+            br
+            span.glyphicon.glyphicon-hand-down
 
-#oss.container.skq-chart-area-1.no-margin
-  .row
-    .col-sm-8
-    .col-sm-4
-      .skq-copy-2
-        h4 Interested in trying Sidekiq out on your own project?
-        p Check out the source code and documentation on GitHub to get started.
-        a.btn.btn-primary.btn-lg(href='https://github.com/mperham/sidekiq/' target='_new') Take me to GitHub
+  #pro.container.skq-chart-area-2.no-margin    
+    .row
+      .col-sm-8
+      .col-sm-4
+        .skq-copy-2
+          h4 Interested in trying Sidekiq out on your own project?
+          p Check out the source code and documentation on GitHub to get started.
+          a.btn.btn-primary.btn-lg(href='#{baseUrl}/products/pro') Learn more &amp; Buy
+          a.prompt.hidden-xs.jump-link(href='#enterprise') 
+            | Running a large company?
+            br
+            span.glyphicon.glyphicon-hand-down
 
-#pro.container.skq-chart-area-2.no-margin    
-  .row
-    .col-sm-8
-    .col-sm-4
-      .skq-copy-2
-        h4 Interested in trying Sidekiq out on your own project?
-        p Check out the source code and documentation on GitHub to get started.
-        a.btn.btn-primary.btn-lg(href='#{baseUrl}/products/pro') Learn more &amp; Buy
-
-#enterprise.container.skq-chart-area-3.no-margin
-  .row
-    .col-sm-8
-    .col-sm-4
-      .skq-copy-2
-        h4 Interested in trying Sidekiq out on your own project?
-        p Check out the source code and documentation on GitHub to get started.
-        a.btn.btn-primary.btn-lg(href='#{baseUrl}/products/enterprise') Learn more &amp; Buy
-
+  #enterprise.container.skq-chart-area-3.no-margin
+    .row
+      .col-sm-8
+      .col-sm-4
+        .skq-copy-2
+          h4 Interested in trying Sidekiq out on your own project?
+          p Check out the source code and documentation on GitHub to get started.
+          a.btn.btn-primary.btn-lg(href='#{baseUrl}/products/enterprise') Learn more &amp; Buy
 
 != partial('_partials/subfooter')
