--- a/public/css/global.less
+++ b/public/css/global.less
@@ -12,7 +12,9 @@
 // Import flat bootstrap theme
 @import "themes/skq/theme";
 
+@max-width: 1800px;
 @transition-time: 300ms;
+@gray-bg: #999;
 
 body{
   padding-top: (@navbar-height);
@@ -25,6 +27,10 @@ body{
 .navbar {
           transition: background-color 0.5s ease;
   -webkit-transition: background-color 0.5s ease;
+}
+
+.navbar-inverse .skq.navbar-brand {
+  color: #fff;
 }
 
 .skq-header{
@@ -311,18 +317,18 @@ h6 {
 }
 
 .skq-col-left { 
-  background-color: #ddd;
+  background-color: fade(#69952f, 20%);
   h3, .glyphicon{ color: #69952f; }
 }
 
 .skq-col-center { 
-  background-color: lighten(@gray-light, 20%);
+  background-color: fade(#00558d, 20%);
 
   h3, .glyphicon, a{ color: #00558d; }
 }
 
 .skq-col-right { 
-  background-color: lighten(@gray, 40%);
+  background-color: fade(@brand-primary, 20%);
 
   h3, .glyphicon, a{ color: @brand-primary; }
 }
@@ -339,7 +345,7 @@ h6 {
 
 .tabs-holder.fixed-mode {
   height: 70px;
-  background-color: #aaa;
+  background-color: @gray-bg;
 }
 
 .skq-tabs.fixed-mode {
@@ -382,7 +388,7 @@ h6 {
 
 #oss, #pro, #enterprise {
   transition: background-color @transition-time ease;
-  background-color: #aaa;
+  background-color: @gray-bg;
 
   // Fade transition
   // .viewing-oss & { background-color: #aaa; }
@@ -391,10 +397,10 @@ h6 {
 }
 
 #pro { background-color: @gray-darker; }
-#ent { background-color: darken(@brand-primary, 10%); }
+#enterprise { background-color: darken(@brand-primary, 10%); }
 
 .skq-tab-left {
-  background-color: #aaa;
+  background-color: @gray-bg;
 }
 
 .skq-tab-center {
@@ -412,36 +418,65 @@ h6 {
     box-shadow: inset 0 8px 0 rgba(255,255,255,0.2);
   }
 }
-.skq-tab-center { color: #fff; }
+.skq-tab-left,
+.skq-tab-center,
 .skq-tab-right { color: #fff; }
 
-[class*=skq-chart-area] {
+.product {
   padding-top: 40px;
   position: relative;
 }
 
+.chart-area {
+  padding-left: 0;
+}
+
 .charts-wrapper {
   width: 95%;
-  height: 80vh;
+  height: 77vh;
   min-height: 580px;
+  padding-left: 30px;
 }
 
 .comparison-chart {
-  // transition: all .25s ease;
   position: absolute;
   left: 0px;
   width: 100%;
   padding: 30px 0 0;
   z-index: 1;
 
+  &.fixed-mode {
+    position: fixed;
+    top: 110px;
+    left: 0px;
+    z-index: 90;
+  }
+
   .row { 
-    max-width: 1600px;
+    max-width: @max-width;
     margin: 0 auto;
+  }
+
+  .col-link { 
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
   }
 
   ul { float: right; }
   ul li:first-child { border-bottom-width: 2px !important; }
   ul li:last-child { border-bottom: 0 !important; }
+  ul li:nth-child(14),
+  ul li:nth-child(15) { min-height: 55px !important; }
+
+  ul li:first-child {
+    .oss & { border-top: 4px solid #888; }
+    .pro & { border-top: 4px solid #444; }
+    .ent & { border-top: 4px solid @brand-primary !important; }
+  }
 
   .glyphicon-ok-sign { color: darken(@brand-success, 10%) }
   .glyphicon-minus-sign { color: darken(@brand-danger, 10%) }
@@ -459,8 +494,8 @@ h6 {
     transition: background-color @transition-time ease;
 
     li {
-      min-height: 36px;
-      padding: 10px 1em;
+      min-height: 30px;
+      padding: 10px 1em 0;
       border-bottom: 1px solid rgba(255,255,255,0.15);
       white-space: nowrap;
       color: @gray;
@@ -475,9 +510,14 @@ h6 {
     height: 100%;
     padding: 8px 0;
     li { 
+      padding-right: 1.25em;
       .viewing-pro &,
       .viewing-ent & { color: @gray-lighter; }
     }
+  }
+
+  .panel {
+    transition: opacity 200ms ease;
   }
 
   [class*=panel-] {
@@ -494,18 +534,32 @@ h6 {
     padding: 8px 0;
     border-radius: 4px;
     border: none;
+    box-shadow: 0 1px 5px rgba(0,0,0,0.4);
 
     li { 
       text-align: center;
       border-bottom: 1px solid rgba(0,0,0,0.15);
     }
+    li:first-child { font-size: 1.2em; }
   }
 
   .panel-mask {
+    position: relative;
+    padding-right: 5px;
+    margin-left: -5px;
     overflow-x: hidden;
     overflow-y: visible;
     width: 32%;
     float: right;
+    transition: width @transition-time;
+    transition-delay: 100ms;
+
+    &.panel-focus { 
+      width: 31%; 
+
+      & .panel { opacity: .85; }
+    }
+    &.panel-minimize { width: 9%; }
   }
 
   .mask-inactive {
@@ -516,13 +570,13 @@ h6 {
     }
 
     & .panel-2 {
-      opacity: .8;
+      opacity: .6;
       margin: 4px 0;
       padding: 4px 0;
     }
 
     & .panel-3 {
-      opacity: .7;
+      opacity: .4;
       margin: 8px 0;
       padding: 0 0;
     }
@@ -530,25 +584,19 @@ h6 {
 
   .mask-active .panel {
     margin-left: 0;
-    background-color: rgba(255,255,255,0.96);
+    background-color: #fff;
   }
-}
-
-.comparison-chart.fixed-mode {
-  position: fixed;
-  top: 110px;
-  left: 0px;
-  z-index: 90;
 }
 
 .prompt {
   transition: color @transition-time ease;
   position: absolute;
-  width: 85%;
+  width: 90%;
   margin: 100px 0 0;
   padding: 0;
-  font-size: .8em;
+  font-size: .85em;
   font-style: italic;
+  text-align: center;
   color: @gray;
   z-index: 91;
 
@@ -564,27 +612,28 @@ h6 {
   span {
     transition: opacity @transition-time ease;
     font-size: 1.5em;
-    line-height: 2em;
+    line-height: 3em;
     opacity: 0;
-    color: #fff;
+    color: #ccc;
   }
 }
 
 .skq-copy-2 {
   position: relative;
-  width: 85%;
+  width: 84%;
   max-width: 400px;
-  margin-top: 33vh;
+  margin-top: 28vh;
   color: @gray-darker;
+  h4 { font-size: 2em; }
   p {
+    font-size: 1.2em;
     margin: 1em 0 1.75em;
     line-height: 1.75em;
   }
   .btn {
-    padding-left: 3em; 
-    padding-right: 3em; 
     position: absolute;
     z-index: 99;
+    width: 90%;
   }
 }
 
@@ -692,7 +741,7 @@ img.icon{
   .skq-support-copy {
     padding: 0 (@grid-gutter-width / 2)
   }
-  [class*="skq-chart-area"] {
+  .product {
     height: auto !important;
   }
   .comparison-chart.fixed-mode {
@@ -733,6 +782,8 @@ footer{
   background-size: auto 50px;
   background-position: @grid-gutter-width @grid-gutter-width;
   background-repeat: no-repeat;
+
+  .container-fluid { max-width: @max-width; }
 
   hr{
     border-color: lighten(@gray-dark, 9%);
@@ -778,6 +829,20 @@ footer{
   margin-left: .75em;
   width: auto;
   height: 50px;
+}
+
+// resize chart area for smaller screen heights
+@media (max-height:@screen-sm){
+  .comparison-chart.fixed-mode {
+    top: 50px;
+  }
+  .skq-tabs.fixed-mode {
+    transition: margin @transition-time ease;
+    margin-top: -50px;
+  }
+  .skq-copy-2 {
+    margin-top: 10vh;
+  }
 }
 
 @media (max-width:@screen-sm){
