refactoring homepage css and js

--- a/public/_partials/comparison-chart.jade
+++ b/public/_partials/comparison-chart.jade
@@ -1,7 +1,7 @@
 .charts-wrapper
-  .ent.panel-mask.mask-inactive
-    a.col-link.jump-link(href='#enterprise')
-    ul.panel.panel-3
+  .col-ent.col-mask
+    a.section-link.jump-link(href='#enterprise')
+    ul.list
       li Med-Lg Companies
       li 
         span.glyphicon.glyphicon-ok-sign  
@@ -30,15 +30,15 @@
         | Commercial
         br
         | with Custom Terms
-        li 
-          | $1750 / year
-          br
-          | per 250 Worker Threads*
+      li 
+        | $1750 / year
+        br
+        | per 250 Worker Threads*
       li Quote + Invoice
 
-  .pro.panel-mask.mask-inactive
-    a.col-link.jump-link(href='#pro')
-    ul.panel.panel-2
+  .col-pro.col-mask
+    a.section-link.jump-link(href='#pro')
+    ul.list
       li Small Business
       li 
         span.glyphicon.glyphicon-ok-sign  
@@ -73,9 +73,9 @@
         | Unlimited Usage
       li Credit Card
   
-  .oss.panel-mask.mask-active
-    a.col-link.jump-link(href='#oss')
-    ul.panel.panel-1
+  .col-oss.col-mask
+    a.section-link.jump-link(href='#oss')
+    ul.list
       li Hobbyists
       li 
         span.glyphicon.glyphicon-ok-sign  
