--- a/public/index.jade
+++ b/public/index.jade
@@ -12,7 +12,7 @@
 
 != partial("_partials/tab-nav")  
 
-.comparison-chart.hidden-xs
+.comparison-chart.viewing-oss.hidden-xs
   .row
     .col-md-8.chart-area
       != partial("_partials/comparison-chart")
