close to final, pending code cleanup and polish, and quote page styling

--- a/public/_partials/comparison-chart.jade
+++ b/public/_partials/comparison-chart.jade
@@ -1,8 +1,9 @@
 .charts-wrapper
-  .col-ent.col-mask
+  .width-reference
+  .col-ent.col-mask.col-inactive
     a.section-link.jump-link(href='#enterprise')
     ul.list
-      li Med-Lg Companies
+      li Med-Large Companies
       li 
         span.glyphicon.glyphicon-ok-sign  
       li
@@ -29,14 +30,14 @@
       li
         | Commercial
         br
-        | with Custom Terms
+        small with Custom Terms
       li 
         | $1750 / year
         br
-        | per 250 Worker Threads*
+        small per 250 Worker Threads*
       li Quote + Invoice
 
-  .col-pro.col-mask
+  .col-pro.col-mask.col-inactive
     a.section-link.jump-link(href='#pro')
     ul.list
       li Small Business
@@ -66,14 +67,14 @@
       li
         | Commercial
         br
-        | No Custom Terms
+        small No Custom Terms
       li 
         | $950 / year
         br
-        | Unlimited Usage
+        small Unlimited Usage
       li Credit Card
   
-  .col-oss.col-mask
+  .col-oss.col-mask.col-inactive
     a.section-link.jump-link(href='#oss')
     ul.list
       li Hobbyists
