--- a/public/css/themes/skq/theme.less
+++ b/public/css/themes/skq/theme.less
@@ -36,8 +36,10 @@ a:focus { text-decoration: none; }
 	border: none;
 }
 
-.row {
-  // margin-right: 0;
+.btn-white {
+  color: @gray-darker;
+  background-color: #fff;
+  border: 0;
 }
 
 .skq-white-bg {
